--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "write-json-file": "^5.0.0"
   },
   "scripts": {
-    "start": "PORT=3001 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
